--- a/src/style.scss
+++ b/src/style.scss
@@ -344,7 +344,7 @@
 		}
 
 		&:focus {
-			outline: 2px solid #0073aa;
+			outline: none;
 			outline-offset: 2px;
 		}
 	}
@@ -488,11 +488,6 @@
 		flex: 0 0 auto; // Ensure consistent sizing
 		margin-bottom: 1rem; // Match screenshot slider margin
 
-		.dashicons {
-			font-size: 3rem;
-			opacity: 0.4;
-			color: #444;
-		}
 
 		span:last-child {
 			font-weight: 500;
@@ -847,7 +842,7 @@
 		}
 
 		&:focus {
-			outline: 2px solid #0073aa;
+			outline: none;
 			outline-offset: 2px;
 			background: #e9ecef;
 		}
@@ -905,7 +900,7 @@
 		}
 
 		&:focus {
-			outline: 2px solid #0073aa;
+			outline: none;
 			outline-offset: 2px;
 		}
 
@@ -1099,7 +1094,7 @@
 
 	// Focus states
 	.wps-screenshot-thumb:focus {
-		outline: 2px solid #0073aa;
+		outline: none;
 		outline-offset: 2px;
 	}
 
